# device_farm_api

./: .env.example  .gitignore  Cargo.toml  providers.json
src/: main.rs  sse.rs  state.rs
src/auth/: jwt.rs  ldap.rs  local.rs  mod.rs
src/handlers/: admin.rs  auth.rs  devices.rs  health.rs  mod.rs  providers.rs
src/models/: domain.rs  mod.rs  requests.rs  responses.rs
